Migrate to mojmap and fix build